--- a/app/design/adminhtml/default/default/template/system/currency/rate/services.phtml
+++ b/app/design/adminhtml/default/default/template/system/currency/rate/services.phtml
@@ -11,5 +11,5 @@
 
 /** @var Mage_Adminhtml_Block_System_Currency_Rate_Services $this */
 ?>
-<strong><?= $this->__('Import Service') ?></strong>
+<label for="rate_services"><?= $this->__('Import Service') ?></label>
 <?= $this->getChildHtml('import_services') ?>
