--- a/app/design/adminhtml/default/default/template/system/currency/rate/matrix.phtml
+++ b/app/design/adminhtml/default/default/template/system/currency/rate/matrix.phtml
@@ -25,7 +25,7 @@ $_rates = ( $_newRates ) ? $_newRates : $_oldRates;
                 <?php $_allowedCurrencies = $this->getAllowedCurrencies(); ?>
                 <?php $_allowedCurrencyCount = count($_allowedCurrencies); ?>
                 <?php $_i = 0; foreach($_allowedCurrencies as $_currencyCode): ?>
-                    <th class="<?= ((++$_i === $_allowedCurrencyCount) ? 'last' : '' ) ?> a-right"><strong><?= $this->escapeHtml($_currencyCode) ?><strong></th>
+                    <th class="<?= ((++$_i === $_allowedCurrencyCount) ? 'last' : '' ) ?> a-right"><strong><?= $this->escapeHtml($_currencyCode) ?></strong></th>
                 <?php endforeach ?>
             </tr>
         </thead>
