--- a/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/options/giftcard.phtml
+++ b/app/design/frontend/base/default/template/maho/giftcard/catalog/product/view/type/options/giftcard.phtml
@@ -45,6 +45,7 @@ $isMessageAllowed = $this->isMessageAllowed();
 }
 .giftcard-options input[type="text"],
 .giftcard-options input[type="email"],
+.giftcard-options input[type="number"],
 .giftcard-options textarea {
     width: 100%;
 }
