--- a/app/design/frontend/base/default/layout/giftcard.xml
+++ b/app/design/frontend/base/default/layout/giftcard.xml
@@ -29,8 +29,12 @@
         </reference>
     </checkout_onepage_paymentmethod>
 
-    <!-- Checkout Cart - Add Gift Card Form -->
+    <!-- Checkout Cart - Add Gift Card Form and Custom Renderer -->
     <checkout_cart_index>
+        <!-- Use custom renderer for gift card items to format dates -->
+        <reference name="checkout.cart">
+            <action method="addItemRender"><type>giftcard</type><block>giftcard/checkout_cart_item_renderer</block><template>checkout/cart/item/default.phtml</template></action>
+        </reference>
         <!-- Add to the extra section where discount codes appear -->
         <reference name="checkout.cart.extra">
             <block type="giftcard/checkout_cart_giftcard" name="checkout.cart.giftcard" as="giftcard" template="maho/giftcard/checkout/cart/giftcard.phtml" />
